[package]
name = "onion_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
arti = { version = "1.2.8" }
arti-client = { version = "0.23.0" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "io-std"] }
anyhow = "1.0.89"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.1"
